@@ -139,87 +139,6 @@ sub alter {
     $self->make_directories_for( $self->config_target( engine => $engine) );
 }
 
-# XXX Begin deprecated.
-
-sub _set {
-    my ($self, $key, $engine, $value) = @_;
-    (my $action = $key) =~ s/_/-/g;
-    $self->usage unless $engine && $value;
-    (my $opt = $key) =~ s/_/-/g;
-    $self->sqitch->warn(__x(
-        qq{  The "{old}" action is deprecated;\n  Instead use "{new}".},
-        old => "set-$action $engine $value",
-        new => "alter $engine --$opt $value",
-    ));
-
-    _chk_engine $engine;
-
-    my $config = $self->sqitch->config;
-
-    hurl engine => __x(
-        'Unknown engine "{engine}"',
-        engine => $engine
-    ) unless $config->get( key => "engine.$engine.target");
-
-    $config->set(
-        key      => "engine.$engine.$key",
-        value    => $value,
-        filename => $config->local_file,
-    );
-    return $self;
-}
-
-my %normalizer_for = (
-    top_dir   => sub { $_[0] ? dir($_[0])->cleanup : undef },
-    plan_file => sub { $_[0] ? file($_[0])->cleanup : undef },
-    client    => sub { $_[0] },
-    target    => sub {
-        my $target = shift or return undef;
-        # Return a normalized URI if it looks like a URI.
-        return URI::db->new($target, 'db:')->as_string if $target =~ /:/;
-        # Otherwise, it needs to be a known target from the config.
-        my $config = shift;
-        return $target if $config->get(key => "target.$target.uri");
-        hurl engine => __x(
-            'Unknown target "{target}"',
-            target => $target
-        );
-    },
-);
-
-$normalizer_for{"$_\_dir"} = $normalizer_for{"reworked_$_\_dir"} = $normalizer_for{top_dir}
-    for qw(deploy revert verify);
-$normalizer_for{reworked_dir} = $normalizer_for{top_dir};
-$normalizer_for{$_} = $normalizer_for{client} for qw(registry extension);
-
-sub set_target {
-    my ($self, $engine, $target) = @_;
-    $self->_set( 'target', $engine, $normalizer_for{target}->(
-        $target, $self->sqitch->config,
-    ) );
-}
-
-sub set_registry  { shift->_set('registry',  @_) }
-sub set_client    { shift->_set('client',    @_) }
-sub set_extension { shift->_set('extension', @_) }
-
-sub _set_dir {
-    my ($self, $key, $engine, $dir) = @_;
-    $self->_set( $key, $engine, $normalizer_for{top_dir}->($dir) );
-}
-
-sub set_top_dir    { shift->_set_dir('top_dir',    @_) }
-sub set_deploy_dir { shift->_set_dir('deploy_dir', @_) }
-sub set_revert_dir { shift->_set_dir('revert_dir', @_) }
-sub set_verify_dir { shift->_set_dir('verify_dir', @_) }
-
-sub set_plan_file {
-    my ($self, $engine, $file) = @_;
-    $self->_set( 'plan_file', $engine, $normalizer_for{plan_file}->($file) );
-}
-
-# XXX End deprecated.
-
 sub rm { shift->remove(@_) }
 sub remove {
     my ($self, $engine) = @_;
@@ -483,64 +402,6 @@ Implements the C<list> action.
 =head3 C<rm>
 
 Implements the C<remove> action.
-
-=begin comment
-
-Deprecated methods.
-
-=head3 C<set_target>
-
-Implements the C<set-target> action.
-
-=head3 C<set_client>
-
-Implements the C<set-client> action.
-
-=head3 C<set_registry>
-
-Implements the C<set-registry> action.
-
-=head3 C<set_top_dir>
-
-Implements the C<set-top-dir> action.
-
-=head3 C<set_plan_file>
-
-Implements the C<set-plan-file> action.
-
-=head3 C<set_deploy_dir>
-
-Implements the C<set-deploy-dir> action.
-
-=head3 C<set_revert_dir>
-
-Implements the C<set-revert-dir> action.
-
-=head3 C<set_verify_dir>
-
-Implements the C<set-verify-dir> action.
-
-=head3 C<set_reworked_dir>
-
-Implements the C<set-reworked-dir> action.
-
-=head3 C<set_reworked_deploy_dir>
-
-Implements the C<set-reworked-deploy-dir> action.
-
-=head3 C<set_reworked_revert_dir>
-
-Implements the C<set-reworked-revert-dir> action.
-
-=head3 C<set_reworked_verify_dir>
-
-Implements the C<set-reworked-verify-dir> action.
-
-=head3 C<set_extension>
-
-Implements the C<set-extension> action.
-
-=end comment
 
 =head3 C<show>
 
